# 135-attention-visualization-trading

./: Cargo.toml  README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
examples/: attention_analysis.rs  basic_attention.rs  trading_strategy.rs
python/: __init__.py  backtest.py  data_loader.py  model.py  requirements.txt  visualization.py
src/: lib.rs
src/backtest/: engine.rs  mod.rs
src/model/: mod.rs  transformer.rs
src/trading/: mod.rs  signals.rs  strategy.rs
